# PlotRedox

./: CLAUDE.md  Cargo.toml  README.md  README_zh.md  build.rs  build_font_subset.rs  extracted_data.csv  sample_project.prdx
.github/workflows/: release.yml
assets/: icon.ai
assets/icon.icon/: icon.json
docs/: scripting_help_zh.md
example_scripts/: 04_steinmetz_fitting.rhai
src/: action.rs  action_handler.rs  core.rs  i18n.rs  icons.rs  main.rs  project.rs  state.rs  ui.rs
src/ide/: editor.rs  help.rs  inspector.rs  mod.rs  presets.rs  workspace.rs
src/mask/: mod.rs
src/recognition/: axis.rs  geometry.rs  mod.rs  pixels.rs  spatial.rs
src/recognition/axis/: line.rs  mod.rs  preprocess.rs  tests.rs  ticks.rs
src/recognition/data/: clustering.rs  curve.rs  mod.rs  sampling.rs  scatter.rs
src/recognition/mask/: mod.rs  results_panel.rs
src/ui/: canvas.rs  mod.rs  modals.rs  panel.rs  sub_toolbar.rs  toolbar.rs  top_panel.rs
src/ui/canvas/: keyboard.rs  mod.rs  mouse.rs
src/ui/mask/: analysis.rs  mod.rs  results_panel.rs
