[package]
name = "plot-digitizer"
version = "0.1.0"
edition = "2021"
authors = ["Qiu Shou", "Antigravity"]
description = "Native absolute high-performance web plot digitizer alternative using Rust+egui"

[dependencies]
eframe = { version = "0.33.3", default-features = false, features = [
    "default_fonts", # Default fonts
    "glow",          # fallback to glow
] }
egui = "0.33.3"
egui_extras = { version = "0.33.3", features = ["image"] }
image = { version = "0.24", features = ["jpeg", "png"] }
rfd = "0.14" # File dialog Dialog
csv = "1.3.0"
arboard = "3.6.1"

[profile.release]
opt-level = 3
lto = true
