[package]
name = "plot-redox"
version = "0.2.1"
edition = "2021"
authors = ["Qiu Shou"]
description = "Native high-performance plot digitizer alternative using Rust+egui"
license = "MIT"

[dependencies]
eframe = { version = "0.33.3", default-features = false, features = [
    "default_fonts",
    "glow",
] }
egui = "0.33.3"
egui_extras = { version = "0.33.3", features = ["image", "syntect"] }
syntect = "5.3.0"
image = { version = "0.24", features = ["jpeg", "png"] }
imageproc = "0.23"
rfd = "0.14"
csv = "1.3.0"
clipboard-rs = "0.3.3"
rhai = "1.24.0"
nalgebra = "0.33"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
zip = { version = "2", default-features = false, features = ["deflate"] }

[profile.release]
opt-level = 3
lto = true

[build-dependencies]
winres = "0.1.12"

[package.metadata.bundle]
identifier = "com.elechou.plot-redox"
resources = []
icon = [
    "assets/icon_exports/icon-iOS-Default-32x32@1x.png",
    "assets/icon_exports/icon-iOS-Default-128x128@1x.png",
    "assets/icon_exports/icon-iOS-Default-256x256@1x.png",
    "assets/icon_exports/icon-iOS-Default-512x512@1x.png",
]
